# CPP_Projects

./: .gitignore  CMakeLists.txt
ChernoOpenGL/: CMakeLists.txt  README.md
ChernoOpenGL/res/shaders/: Basic.shader
ChernoOpenGL/src/: CMakeLists.txt  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  main.cpp
ChernoOpenGL/src/tests/: Test.cpp  Test.hpp  TestClearColor.cpp  TestClearColor.hpp  TestTexture2D.cpp  TestTexture2D.hpp
Demo_01/: CMakeLists.txt  address.cpp  arrfun2.cpp  assgin_st.cpp  compstr1.cpp  formore.cpp  main.cpp  outfile.cpp  structur.cpp  sumafile.cpp  test_01.cpp  use_new.cpp
Demo_01/src/: Server_Socket.cpp  arfupt.cpp  arraynew.cpp  arrfun1.cpp  arrfun2.cpp  arrfun4.cpp  arrobj.cpp  atrctfun.cpp  calling.cpp  cubes.cpp  delete.cpp  firstref.cpp  forstr1.cpp  fun_ptr.cpp  inline.cpp  mixtypes.cpp  newstrct.cpp  pointer.cpp  recur.cpp  ruler.cpp  sceref.cpp  strgback.cpp  strgfun.cpp  strquote.cpp  strtref.cpp  swaps.cpp  test_02.cpp  test_03.cpp  test_04.cpp  travel.cpp
Linux_Ping/: CMakeLists.txt  README.md
Linux_Ping/src/: ping.cpp
SFMLTut/: CMakeLists.txt
SFMLTut/include/: TextBox.hpp
SFMLTut/src/: main.cpp
SFML_BlackWhite/: CMakeLists.txt
SFML_BlackWhite/src/: main.cpp
Skia_GLFW/: CMakeLists.txt  tree.txt
Skia_GLFW/glad/: CMakeLists.txt
Skia_GLFW/include/: BaseView.hpp  Canvas.hpp  CanvasBuilder.hpp  Color.hpp  Paint.hpp  Shape.hpp  SkiaIncludes.hpp
Skia_GLFW/src/: BaseView.cpp  main.cpp  test.cpp
Skia_glfw/: CMakeLists.txt
Skia_glfw/src/: CMakeLists.txt  main.cpp
ded/: CMakeLists.txt
ded/src/: common.c  minirent.h
mine-sweep-SDL2/: CMakeLists.txt
mine-sweep-SDL2/include/: context.hpp  matrix.hpp  pch.hpp  renderer.hpp  window.hpp
mine-sweep-SDL2/src/: context.cpp  main.cpp  renderer.cpp  window.cpp
